# pet_webgpusolver

./: Cargo.toml  README.md  index.html  loader.js  testpage.html
.cargo/: config.toml
heateq/: loader.js
src/: aspng.rs  boundary_cond.wgsl  buffer_move.wgsl  desktop_app.rs  heat.wgsl  heatcolor.wgsl  iterate_heat.wgsl  laplacian.wgsl  lib.rs  main.rs  mathutils.rs  squaregrid.rs  web_app.rs  webgpuheat copy.rs  webgpuheat.rs  wgpuworkhorse.rs
